added secret key

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DJANGO_SECRET_KEY="&4a%gkrh!#k26xdhq5@vyy&!^458ulx7&xe&1vag209x@7+eet"
 DOCKER_IP=localhost
 DOCKER_USER=docker
 DOCKER_PASSWORD=docker
